Turned on ILMerging - just getting the merge completed at this point. After verification, the next step is to push the assembly back into the app drop folder

--- a/settings/UppercuT.config
+++ b/settings/UppercuT.config
@@ -68,6 +68,6 @@
   <property name="app.moma" value="..\..\${folder.references}\MoMA\MoMA.exe" overwrite="false" />
   <property name="app.nitriq" value="C:\Program Files (x86)\NimblePros\Nitriq Console + Pro\Nitriq.Console.exe" overwrite="false" />
   <property name="allow.powershell.unrestricted" value="false" overwrite="false" />
-  <property name="run.ilmerge" value="false" overwrite="false" />
+  <property name="run.ilmerge" value="true" overwrite="false" />
 
 </project>
