--- a/src/Magnum.FileSystem/Magnum.FileSystem.csproj
+++ b/src/Magnum.FileSystem/Magnum.FileSystem.csproj
@@ -32,7 +32,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Build|AnyCPU'">
-    <OutputPath>bin\Build\</OutputPath>
+    <OutputPath>..\..\build_output\Magnum\Magnum\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <Optimize>true</Optimize>
     <DebugType>pdbonly</DebugType>
