--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -583,6 +583,13 @@
     <Compile Include="Serialization\TypeSerializers\UriSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\UShortSerializer.cs" />
     <Compile Include="Serialization\TypeWriter.cs" />
+    <Compile Include="Sockets\Events\SocketServerRunning.cs" />
+    <Compile Include="Sockets\Events\SocketServerStopped.cs" />
+    <Compile Include="Sockets\Events\SocketServerStopping.cs" />
+    <Compile Include="Sockets\SocketServer.cs" />
+    <Compile Include="Sockets\Events\SocketServerEvent.cs" />
+    <Compile Include="Sockets\Events\SocketServerEventType.cs" />
+    <Compile Include="Sockets\Events\SocketServerStarting.cs" />
     <Compile Include="StateMachine\Activity.cs" />
     <Compile Include="StateMachine\BasicEvent.cs" />
     <Compile Include="StateMachine\BasicEventAction.cs" />
