Added an HttpServer, refactored the SocketServer

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -583,13 +583,24 @@
     <Compile Include="Serialization\TypeSerializers\UriSerializer.cs" />
     <Compile Include="Serialization\TypeSerializers\UShortSerializer.cs" />
     <Compile Include="Serialization\TypeWriter.cs" />
-    <Compile Include="Sockets\Events\SocketServerRunning.cs" />
-    <Compile Include="Sockets\Events\SocketServerStopped.cs" />
-    <Compile Include="Sockets\Events\SocketServerStopping.cs" />
-    <Compile Include="Sockets\SocketServer.cs" />
-    <Compile Include="Sockets\Events\SocketServerEvent.cs" />
-    <Compile Include="Sockets\Events\SocketServerEventType.cs" />
-    <Compile Include="Sockets\Events\SocketServerStarting.cs" />
+    <Compile Include="Servers\ConnectionContext.cs" />
+    <Compile Include="Servers\Events\ServerRunning.cs" />
+    <Compile Include="Servers\Events\ServerStopped.cs" />
+    <Compile Include="Servers\Events\ServerStopping.cs" />
+    <Compile Include="Servers\HttpConnectionContext.cs" />
+    <Compile Include="Servers\HttpRequestContext.cs" />
+    <Compile Include="Servers\HttpResponseContext.cs" />
+    <Compile Include="Servers\HttpServer.cs" />
+    <Compile Include="Servers\RequestContext.cs" />
+    <Compile Include="Servers\ResponseContext.cs" />
+    <Compile Include="Servers\ServerContext.cs" />
+    <Compile Include="Servers\SocketConnection.cs" />
+    <Compile Include="Servers\SocketServer.cs" />
+    <Compile Include="Servers\StreamServer.cs" />
+    <Compile Include="Servers\Events\ServerEvent.cs" />
+    <Compile Include="Servers\Events\ServerEventType.cs" />
+    <Compile Include="Servers\Events\ServerStarting.cs" />
+    <Compile Include="Servers\StreamServerException.cs" />
     <Compile Include="StateMachine\Activity.cs" />
     <Compile Include="StateMachine\BasicEvent.cs" />
     <Compile Include="StateMachine\BasicEventAction.cs" />
