--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -171,6 +171,7 @@
     <Compile Include="Extensions\GenericExtension_Specs.cs" />
     <Compile Include="Extensions\ObjectExtension_Specs.cs" />
     <Compile Include="Extensions\StringExtension_Specs.cs" />
+    <Compile Include="Extensions\UriExtension_Specs.cs" />
     <Compile Include="FileSystem\FileSpecs\Directory_Specs.cs" />
     <Compile Include="FileSystem\FileSpecs\DotNetFileSystem_Specs.cs" />
     <Compile Include="FileSystem\FileSpecs\File_Specs.cs" />
@@ -244,7 +245,8 @@
     <Compile Include="Serialization\SimpleType_Specs.cs" />
     <Compile Include="Serialization\FastSerializerObjects_Specs.cs" />
     <Compile Include="Serialization\SerializationApi_Specs.cs" />
-    <Compile Include="Sockets\SocketServer_Specs.cs" />
+    <Compile Include="Servers\SocketServer_Specs.cs" />
+    <Compile Include="Servers\HttpServer_Specs.cs" />
     <Compile Include="StateMachine\Anytime_Specs.cs" />
     <Compile Include="StateMachine\ChannelConfigurator_Specs.cs" />
     <Compile Include="StateMachine\Combine_Specs.cs" />
