Added benchmark, request not handled channel

--- a/src/Magnum.Benchmarks/Magnum.Benchmarks.csproj
+++ b/src/Magnum.Benchmarks/Magnum.Benchmarks.csproj
@@ -64,6 +64,7 @@
     <Compile Include="..\SolutionVersion.cs">
       <Link>SolutionVersion.cs</Link>
     </Compile>
+    <Compile Include="HttpServerBenchmark.cs" />
     <Compile Include="MessagePassingBenchmark.cs" />
     <Compile Include="Program.cs" />
   </ItemGroup>
