--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -587,7 +587,8 @@
     <Compile Include="Servers\Events\ServerRunning.cs" />
     <Compile Include="Servers\Events\ServerStopped.cs" />
     <Compile Include="Servers\Events\ServerStopping.cs" />
-    <Compile Include="Servers\HttpConnectionChannel.cs" />
+    <Compile Include="Servers\HtmlMessageChannel.cs" />
+    <Compile Include="Servers\RequestNotHandledChannel.cs" />
     <Compile Include="Servers\HttpConnectionChannelProvider.cs" />
     <Compile Include="Servers\HttpConnectionContext.cs" />
     <Compile Include="Servers\HttpRequestContext.cs" />
