A joyful new toy to play with

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -584,26 +584,28 @@
     <Compile Include="Serialization\TypeSerializers\UShortSerializer.cs" />
     <Compile Include="Serialization\TypeWriter.cs" />
     <Compile Include="Servers\ConnectionContext.cs" />
+    <Compile Include="Servers\ConnectionHandler.cs" />
+    <Compile Include="Servers\PatternMatchConnectionHandler.cs" />
     <Compile Include="Servers\Events\ServerRunning.cs" />
     <Compile Include="Servers\Events\ServerStopped.cs" />
     <Compile Include="Servers\Events\ServerStopping.cs" />
-    <Compile Include="Servers\HtmlMessageChannel.cs" />
-    <Compile Include="Servers\RequestNotHandledChannel.cs" />
-    <Compile Include="Servers\HttpConnectionChannelProvider.cs" />
-    <Compile Include="Servers\HttpConnectionContext.cs" />
-    <Compile Include="Servers\HttpRequestContext.cs" />
-    <Compile Include="Servers\HttpResponseContext.cs" />
+    <Compile Include="Servers\ExtensionsToConnectionContext.cs" />
+    <Compile Include="Servers\Internal\BadRequestConnectionHandler.cs" />
+    <Compile Include="Servers\Internal\HttpConnectionChannelProvider.cs" />
+    <Compile Include="Servers\Internal\HttpConnectionContext.cs" />
+    <Compile Include="Servers\Internal\HttpRequestContext.cs" />
+    <Compile Include="Servers\Internal\HttpResponseContext.cs" />
     <Compile Include="Servers\HttpServer.cs" />
     <Compile Include="Servers\RequestContext.cs" />
     <Compile Include="Servers\ResponseContext.cs" />
     <Compile Include="Servers\ServerContext.cs" />
-    <Compile Include="Servers\SocketConnection.cs" />
     <Compile Include="Servers\SocketServer.cs" />
     <Compile Include="Servers\StreamServer.cs" />
     <Compile Include="Servers\Events\ServerEvent.cs" />
     <Compile Include="Servers\Events\ServerEventType.cs" />
     <Compile Include="Servers\Events\ServerStarting.cs" />
     <Compile Include="Servers\StreamServerException.cs" />
+    <Compile Include="Servers\VersionConnectionHandler.cs" />
     <Compile Include="StateMachine\Activity.cs" />
     <Compile Include="StateMachine\BasicEvent.cs" />
     <Compile Include="StateMachine\BasicEventAction.cs" />
