HttpServer changed, ValueProvider changes, Json changes

--- a/src/Magnum.FileSystem/Magnum.FileSystem.csproj
+++ b/src/Magnum.FileSystem/Magnum.FileSystem.csproj
@@ -30,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>..\..\bin\FileSystem\Magnum.FileSystem.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Build|AnyCPU'">
     <OutputPath>..\..\build_output\Magnum\Magnum\</OutputPath>
