--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -422,19 +422,27 @@
     <Compile Include="Graphing\GraphData.cs" />
     <Compile Include="Graphing\Vertex.cs" />
     <Compile Include="Logging\ConsoleLogger.cs" />
-    <Compile Include="Logging\ConsoleLogProvider.cs" />
-    <Compile Include="Logging\ConsoleLogWriter.cs" />
+    <Compile Include="Logging\ExtensionsToLogLevel.cs" />
+    <Compile Include="Logging\Internal\LogMessageFormatter.cs" />
+    <Compile Include="Logging\Internal\LogMessageLogger.cs" />
     <Compile Include="Logging\ILogger.cs" />
-    <Compile Include="Logging\ILogProvider.cs" />
-    <Compile Include="Logging\ILogSource.cs" />
-    <Compile Include="Logging\ILogWriter.cs" />
+    <Compile Include="Logging\LogWriter.cs" />
     <Compile Include="Logging\Logger.cs" />
     <Compile Include="Logging\LoggerException.cs" />
-    <Compile Include="Logging\LoggerFacade.cs" />
     <Compile Include="Logging\LogLevel.cs" />
+    <Compile Include="Logging\Messages\DebugLogMessage.cs" />
+    <Compile Include="Logging\Messages\ErrorLogMessage.cs" />
+    <Compile Include="Logging\Messages\FatalLogMessage.cs" />
+    <Compile Include="Logging\Messages\InfoLogMessage.cs" />
+    <Compile Include="Logging\Messages\Internal\DebugLogMessageImpl.cs" />
+    <Compile Include="Logging\Messages\Internal\ErrorLogMessageImpl.cs" />
+    <Compile Include="Logging\Messages\Internal\FatalLogMessageImpl.cs" />
+    <Compile Include="Logging\Messages\Internal\InfoLogMessageImpl.cs" />
+    <Compile Include="Logging\Messages\Internal\LogMessageImpl.cs" />
+    <Compile Include="Logging\Messages\Internal\WarnLogMessageImpl.cs" />
+    <Compile Include="Logging\Messages\LogMessage.cs" />
+    <Compile Include="Logging\Messages\WarnLogMessage.cs" />
     <Compile Include="Logging\TraceLogger.cs" />
-    <Compile Include="Logging\TraceLogWriter.cs" />
-    <Compile Include="Logging\TraceLogProvider.cs" />
     <Compile Include="Monads\CurryExpressionVisitor.cs" />
     <Compile Include="Monads\State.cs" />
     <Compile Include="Pipeline\Visitors\GraphPipelineVisitor.cs" />
