Working on actor reflection for Inbox support

--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -100,15 +100,17 @@
     <Compile Include="Actions\ActionQueue_Specs.cs" />
     <Compile Include="Actions\ActionScheduler_Specs.cs" />
     <Compile Include="Actions\LoopbackAction_Specs.cs" />
+    <Compile Include="Actors\Auctions\Ask_Specs.cs" />
+    <Compile Include="Actors\Auctions\Auction.cs" />
     <Compile Include="Actors\Calculator_Example.cs" />
-    <Compile Include="Actors\Channel_Specs.cs" />
+    <Compile Include="Channels\Channel_Specs.cs" />
     <Compile Include="Actors\PingPongDemo\Ping.cs" />
     <Compile Include="Actors\PingPongDemo\PingActor.cs" />
     <Compile Include="Actors\PingPongDemo\PingPong_Demo.cs" />
     <Compile Include="Actors\PingPongDemo\Pong.cs" />
     <Compile Include="Actors\PingPongDemo\PongActor.cs" />
     <Compile Include="Actors\PingPong_Example.cs" />
-    <Compile Include="Actors\ThreadActionScheduler_Specs.cs" />
+    <Compile Include="Channels\TimerScheduler_Specs.cs" />
     <Compile Include="Binding\Binding_Specs.cs" />
     <Compile Include="Binding\TestModelBinderContext.cs" />
     <Compile Include="Cache_Specs.cs" />
@@ -124,12 +126,14 @@
     <Compile Include="Channels\Connect_Specs.cs" />
     <Compile Include="Channels\ConsumerInstance_Specs.cs" />
     <Compile Include="Channels\ConsumerPool_Specs.cs" />
+    <Compile Include="Channels\Context_Specs.cs" />
     <Compile Include="Channels\DubSeeEff_Specs.cs" />
     <Compile Include="Channels\Future_Specs.cs" />
     <Compile Include="Channels\Interval_Specs.cs" />
     <Compile Include="Channels\Mailbox_Specs.cs" />
     <Compile Include="Channels\PingPong_Specs.cs" />
     <Compile Include="Channels\RemoteChannel_Specs.cs" />
+    <Compile Include="Channels\RequestResponseContext_Specs.cs" />
     <Compile Include="Channels\SerializedChannel_Specs.cs" />
     <Compile Include="Channels\SynchronizationContext_Specs.cs" />
     <Compile Include="Channels\ThreadPoolChannel_Specs.cs" />
