--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -145,6 +145,7 @@
     <Compile Include="Binding\TypeBinders\ValueTypeBinder.cs" />
     <Compile Include="Channels\ChannelProviderFactory.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForDistributedChannels.cs" />
+    <Compile Include="Channels\Configuration\ExtensionsForPropertyChannel.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForSynchronizedChannels.cs" />
     <Compile Include="Channels\Configuration\ExtensionsForWcfChannels.cs" />
     <Compile Include="Channels\Configuration\Internal\AbstractChannelConnection.cs" />
@@ -153,6 +154,17 @@
     <Compile Include="Channels\Configuration\Internal\ChannelConnectionConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\DistributedInstanceChannelConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\DistributedInstanceChannelProviderConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\PropertyChannelConnectionConfigurator.cs" />
+    <Compile Include="Channels\Configuration\Internal\PropertyChannelConnectionConfiguratorImpl.cs" />
+    <Compile Include="Channels\Context\Message.cs" />
+    <Compile Include="Channels\Context\MessageImpl.cs" />
+    <Compile Include="Channels\Context\Request.cs" />
+    <Compile Include="Channels\Context\RequestImpl.cs" />
+    <Compile Include="Channels\Context\Response.cs" />
+    <Compile Include="Channels\Context\ResponseImpl.cs" />
+    <Compile Include="Channels\ExtensionsForContext.cs" />
+    <Compile Include="Channels\TypedChannelAdapter.cs" />
+    <Compile Include="Channels\ActorInbox.cs" />
     <Compile Include="Fibers\Configuration\FiberConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\InstanceChannelProviderConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\SynchronizedChannelConnectionConfigurator.cs" />
@@ -221,12 +233,10 @@
     <Compile Include="Channels\MessageConverter.cs" />
     <Compile Include="Channels\Configuration\Internal\DisconnectChannelVisitor.cs" />
     <Compile Include="Channels\SelectiveConsumer.cs" />
-    <Compile Include="Channels\DefaultMailbox.cs" />
-    <Compile Include="Channels\Mailbox.cs" />
-    <Compile Include="Channels\RequestResponseChannel.cs" />
+    <Compile Include="Channels\SynchronousInbox.cs" />
+    <Compile Include="Channels\Inbox.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
     <Compile Include="Channels\Visitors\TraceChannelVisitor.cs" />
-    <Compile Include="Channels\TypedChannelAdapter.cs" />
     <Compile Include="Channels\UntypedChannel.cs" />
     <Compile Include="Channels\Internal\WcfMessageEnvelope.cs" />
     <Compile Include="Concurrency\Atomic.cs" />
