Moving closer to container model for actors instead of raw actors

--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Actions\LoopbackAction_Specs.cs" />
     <Compile Include="Actors\Auctions\Ask_Specs.cs" />
     <Compile Include="Actors\Auctions\Auction.cs" />
+    <Compile Include="Actors\Auctions\DelegateActorFactory.cs" />
     <Compile Include="Actors\Calculator_Example.cs" />
     <Compile Include="Channels\Channel_Specs.cs" />
     <Compile Include="Actors\PingPongDemo\Ping.cs" />
