More actor goodness coming

--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -103,10 +103,18 @@
     <Compile Include="Actors\Actor.cs" />
     <Compile Include="Actors\ActorCache.cs" />
     <Compile Include="Actors\ActorFactory.cs" />
+    <Compile Include="Actors\ActorInstance.cs" />
+    <Compile Include="Actors\ActorProvider.cs" />
     <Compile Include="Actors\ActorRegistry.cs" />
     <Compile Include="Actors\ActorRepository.cs" />
+    <Compile Include="Actors\ExtensionsToActorInstance.cs" />
     <Compile Include="Actors\Internal\ActorChannelProvider.cs" />
+    <Compile Include="Actors\Internal\DelegateActorFactory.cs" />
+    <Compile Include="Actors\Internal\ExitImpl.cs" />
+    <Compile Include="Actors\Internal\KillImpl.cs" />
     <Compile Include="Actors\Internal\ThreadStaticActorFactory.cs" />
+    <Compile Include="Actors\Messages\Exit.cs" />
+    <Compile Include="Actors\Messages\Kill.cs" />
     <Compile Include="Binding\BinderContext.cs" />
     <Compile Include="Binding\FastModelBinder.cs" />
     <Compile Include="Binding\FastObjectBinder.cs" />
@@ -163,7 +171,7 @@
     <Compile Include="Channels\Context\ResponseImpl.cs" />
     <Compile Include="Channels\ExtensionsForContext.cs" />
     <Compile Include="Channels\TypedChannelAdapter.cs" />
-    <Compile Include="Channels\ActorInbox.cs" />
+    <Compile Include="Actors\Internal\ActorInbox.cs" />
     <Compile Include="Fibers\Configuration\FiberConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\InstanceChannelProviderConfiguratorImpl.cs" />
     <Compile Include="Channels\Configuration\Internal\SynchronizedChannelConnectionConfigurator.cs" />
@@ -232,8 +240,8 @@
     <Compile Include="Channels\MessageConverter.cs" />
     <Compile Include="Channels\Configuration\Internal\DisconnectChannelVisitor.cs" />
     <Compile Include="Channels\SelectiveConsumer.cs" />
-    <Compile Include="Channels\SynchronousInbox.cs" />
-    <Compile Include="Channels\Inbox.cs" />
+    <Compile Include="Actors\Internal\SynchronousInbox.cs" />
+    <Compile Include="Actors\Inbox.cs" />
     <Compile Include="Channels\ShuntChannel.cs" />
     <Compile Include="Channels\Visitors\TraceChannelVisitor.cs" />
     <Compile Include="Channels\UntypedChannel.cs" />
