--- a/src/Magnum.Specs/Magnum.Specs.csproj
+++ b/src/Magnum.Specs/Magnum.Specs.csproj
@@ -100,8 +100,10 @@
     <Compile Include="Actions\ActionQueue_Specs.cs" />
     <Compile Include="Actions\ActionScheduler_Specs.cs" />
     <Compile Include="Actions\LoopbackAction_Specs.cs" />
+    <Compile Include="Actors\AnonymousActor_Specs.cs" />
     <Compile Include="Actors\Auctions\Ask_Specs.cs" />
     <Compile Include="Actors\Auctions\Auction.cs" />
+    <Compile Include="Actors\Auctions\Given_an_auction_actor_instance.cs" />
     <Compile Include="Actors\Calculator_Example.cs" />
     <Compile Include="Channels\Channel_Specs.cs" />
     <Compile Include="Actors\PingPongDemo\Ping.cs" />
