--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -110,6 +110,7 @@
     <Compile Include="Actors\AnonymousActor.cs" />
     <Compile Include="Actors\AnonymousActorFactory.cs" />
     <Compile Include="Actors\ExtensionsToActorInstance.cs" />
+    <Compile Include="Actors\ExtensionsToInbox.cs" />
     <Compile Include="Actors\Internal\ActorChannelProvider.cs" />
     <Compile Include="Actors\Internal\DelegateActorFactory.cs" />
     <Compile Include="Actors\Internal\ExitImpl.cs" />
@@ -165,12 +166,14 @@
     <Compile Include="Channels\Configuration\Internal\DistributedInstanceChannelProviderConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\PropertyChannelConnectionConfigurator.cs" />
     <Compile Include="Channels\Configuration\Internal\PropertyChannelConnectionConfiguratorImpl.cs" />
-    <Compile Include="Channels\Context\Message.cs" />
-    <Compile Include="Channels\Context\MessageImpl.cs" />
-    <Compile Include="Channels\Context\Request.cs" />
-    <Compile Include="Channels\Context\RequestImpl.cs" />
-    <Compile Include="Channels\Context\Response.cs" />
-    <Compile Include="Channels\Context\ResponseImpl.cs" />
+    <Compile Include="Channels\Message.cs" />
+    <Compile Include="Channels\Internal\MessageImpl.cs" />
+    <Compile Include="Channels\Request.cs" />
+    <Compile Include="Channels\Internal\RequestImpl.cs" />
+    <Compile Include="Channels\Response.cs" />
+    <Compile Include="Channels\Internal\ResponseImpl.cs" />
+    <Compile Include="Actors\SentRequest.cs" />
+    <Compile Include="Actors\Internal\SentRequestImpl.cs" />
     <Compile Include="Channels\ExtensionsForContext.cs" />
     <Compile Include="Channels\TypedChannelAdapter.cs" />
     <Compile Include="Actors\Internal\ActorInbox.cs" />
