--- a/src/Magnum/Magnum.csproj
+++ b/src/Magnum/Magnum.csproj
@@ -115,6 +115,8 @@
     <Compile Include="Actors\Internal\DelegateActorFactory.cs" />
     <Compile Include="Actors\Internal\ExitImpl.cs" />
     <Compile Include="Actors\Internal\KillImpl.cs" />
+    <Compile Include="Actors\Internal\WithinTimeout.cs" />
+    <Compile Include="Actors\Internal\WithinTimeoutHandler.cs" />
     <Compile Include="Actors\Internal\ThreadStaticActorFactory.cs" />
     <Compile Include="Actors\Messages\Exit.cs" />
     <Compile Include="Actors\Messages\Kill.cs" />
