--- a/src/Magnum.Infrastructure/Magnum.Infrastructure.csproj
+++ b/src/Magnum.Infrastructure/Magnum.Infrastructure.csproj
@@ -118,9 +118,21 @@
     <Compile Include="Auditing\Internal\EventListener.cs" />
     <Compile Include="Auditing\ExtensionsToConfiguration.cs" />
     <Compile Include="Auditing\Internal\AuditEventConsumerChannelVisitor.cs" />
+    <Compile Include="Auditing\Internal\EventListenerConfigurator.cs" />
+    <Compile Include="Auditing\Internal\EventListenerConfiguratorImpl.cs" />
+    <Compile Include="Auditing\Internal\PostInsertEventConfigurator.cs" />
+    <Compile Include="Auditing\Internal\PostInsertEventImpl.cs" />
+    <Compile Include="Auditing\Internal\PostInsertListener.cs" />
+    <Compile Include="Auditing\Internal\PostUpdateEventConfigurator.cs" />
+    <Compile Include="Auditing\Internal\PreInsertEventConfigurator.cs" />
+    <Compile Include="Auditing\Internal\PreInsertEventImpl.cs" />
+    <Compile Include="Auditing\Internal\PreInsertListener.cs" />
+    <Compile Include="Auditing\Internal\PreUpdateEventConfigurator.cs" />
+    <Compile Include="Auditing\PostInsertEvent.cs" />
     <Compile Include="Auditing\PostUpdateEvent.cs" />
     <Compile Include="Auditing\Internal\PostUpdateEventImpl.cs" />
     <Compile Include="Auditing\Internal\PostUpdateListener.cs" />
+    <Compile Include="Auditing\PreInsertEvent.cs" />
     <Compile Include="Auditing\PreUpdateEvent.cs" />
     <Compile Include="Auditing\Internal\PreUpdateEventImpl.cs" />
     <Compile Include="Auditing\Internal\PreUpdateListener.cs" />
